--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Sites Blog</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -13,19 +13,21 @@
 <div class="container mt-5">
     <h1>Blog Details</h1>
     <div class="alert alert-info mt-2">
-    <h3 th:text="${post.title}"/>
-    <p th:text="${post.full_text}"/>
-    <p><b>Просмотры </b><span th:text="${post.views}"/></p>
-    <a th:href=" '/blog/' + ${post.id} + '/edit'" class="btn btn-warning">Редактировать...</a>
-    <!--        /blog/1/edit        or      /blog/1/remove      -->
+        <h3 th:text="${post.title}"/>
+        <p th:text="${post.full_text}"/>
+        <p><b>Просмотры </b><span th:text="${post.views}"/></p>
+        <a th:href=" '/blog/' + ${post.id} + '/edit'" class="btn btn-warning">Редактировать...</a>
+        <!--        /blog/1/edit        or      /blog/1/remove      -->
         <form th:action="'/blog/' + ${post.id} + '/remove'" method="post">
             <button class="btn btn-warning" type="submit">Удалить...</button>
         </form>
 
-</div>
+    </div>
 </div>
 <!--    FOOTER  -->
 <div th:insert="blocks/footer :: footer"></div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 </html>
