--- a/src/main/resources/templates/blog-edit.html
+++ b/src/main/resources/templates/blog-edit.html
@@ -2,24 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Редактирование статьи</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 
 <!-- BODY -->
-<div class="container mt-5 mb-5" >
+<div class="container mt-5 mb-5">
     <h1>Редактирование статьти</h1>
-<!--    ЕСЛИ ТУТ НЕ ПРОПИСАТЬ action ТО ОБРАБОТКА БУДЕТ ТУТ ЖЕ ТО ЕСТЬ /blog/${id}/edit-->
+    <!--    ЕСЛИ ТУТ НЕ ПРОПИСАТЬ action ТО ОБРАБОТКА БУДЕТ ТУТ ЖЕ ТО ЕСТЬ /blog/${id}/edit-->
     <form method="post"> <!--action="/blog/${id}/edit"-->
-        <input type="text" name="title" th:value="${post.title}" placeholder="Введите название статьи" class="form-control"><br>
-        <input type="text" name="anons" th:value="${post.anons}" placeholder="Введите анонс статьи" class="form-control"><br>
-        <textarea name="full_text" placeholder="Введите полный текст статьи" class="form-control" th:text="${post.full_text}"/><br>
+        <input type="text" name="title" th:value="${post.title}" placeholder="Введите название статьи"
+               class="form-control"><br>
+        <input type="text" name="anons" th:value="${post.anons}" placeholder="Введите анонс статьи"
+               class="form-control"><br>
+        <textarea name="full_text" placeholder="Введите полный текст статьи" class="form-control"
+                  th:text="${post.full_text}"/><br>
         <button type="submit" class="btn btn-success">Обновить</button>
     </form>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 </html>
